--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -17,7 +17,7 @@ DEPLOY_TO_GITHUB: &DEPLOY_TO_GITHUB
     - name="trash-$TRAVIS_TAG-$TARGET"
     - mkdir $name
     - cp target/$TARGET/release/trash $name/
-    - cp README.md LICENSE-MIT LICENSE-APACHE $name/
+    - cp README.md LICENSE $name/
     - tar czvf $name.tar.gz $name
   deploy:
     provider: releases
@@ -56,6 +56,3 @@ matrix:
     install: true
     <<: *DEPLOY_TO_GITHUB
 
-notifications:
-  email:
-    on_success: never
